sandbox/output
ProfitDeduplicate.java:17: error: ')' expected
                ProfitDeduplicate::calculateProfit(costs, revenue));
                                                  ^
ProfitDeduplicate.java:17: error: not a statement
                ProfitDeduplicate::calculateProfit(costs, revenue));
                                                   ^
ProfitDeduplicate.java:17: error: ';' expected
                ProfitDeduplicate::calculateProfit(costs, revenue));
                                                        ^
ProfitDeduplicate.java:17: error: not a statement
                ProfitDeduplicate::calculateProfit(costs, revenue));
                                                          ^
ProfitDeduplicate.java:17: error: ';' expected
                ProfitDeduplicate::calculateProfit(costs, revenue));
                                                                 ^
5 errors
